--- a/claire-test/index.html
+++ b/claire-test/index.html
@@ -1,1 +1,9 @@
-안녕하세요!
+<!DOCTYPE html>
+<html>
+	<body>
+		<h1>Hello</h1>
+		<button type="button" onclick='document.getElementById("demo").innerHTML = "Hello JavaScript!"'>Turn on</button>
+		
+		<button type="button" onclick='document.getElementById("demo").innerHTML = "Hello JavaScript!"'>Turn off</button>
+	</body>
+</html>
