1일차 스터디

--- a/gilbert-test/Day01/Ex02.html
+++ b/gilbert-test/Day01/Ex02.html
@@ -40,7 +40,7 @@
             bol = false;
         }else{
             backGround.style.backgroundColor = "#fff";
-            light.style.backgroundColor = "#fff";
+            light.style.backgroundColor = "red";
             bol = true;
         }
     });
