계산기 오류수정

--- a/gilbert-test/Day02/Calc.html
+++ b/gilbert-test/Day02/Calc.html
@@ -89,9 +89,9 @@
             switch (reg[0]){    //연산자에 따른 연산
                 case "+" : add(); break;
                 case "-" : sub(); break;
-                case "*" : div(); break;
-                case "/" : rem(); break;
-                case "%" : mul(); break;
+                case "*" : mul(); break;
+                case "/" : div(); break;
+                case "%" : rem(); break;
                 default : alert('잘못된 연산식입니다.');
             }
         };
