--- a/gilbert-test/Day02/Calc.html
+++ b/gilbert-test/Day02/Calc.html
@@ -53,7 +53,7 @@
                 <td><button value="+">+</button></td>
             </tr>
             <tr>
-                <td colspan="2" value="0"><button>0</button></td>
+                <td colspan="2"><button value="0">0</button></td>
                 <td><button value=".">.</button></td>
                 <td><button value="=">=</button></td>
             </tr>
