--- a/merlin-test/cal/index.html
+++ b/merlin-test/cal/index.html
@@ -11,9 +11,9 @@
 <body>
     <div class="wrap">
         <div class="box_screen" id="screen">
-            0
+
         </div>
-        <div class="wrap_btn" id="btnWrap">
+        <div class="wrap_btn" id="btnsNum">
             <button type="button">0</button>
             <button type="button">1</button>
             <button type="button">2</button>
@@ -25,9 +25,9 @@
             <button type="button">8</button>
             <button type="button">9</button>
         </div>
-        <div class="wrap_cal">
-            <button type="button" id="plus">+</button>
-            <button type="button" id="minus">-</button>
+        <div id="btnsCal">
+            <button type="button" id="Plus">+</button>
+            <button type="button" id="Minus">-</button>
             <button type="button" id="result">=</button>
         </div>
     </div>
