3일차 자판기

--- a/gilbert-test/Day03/vendingMachine.html
+++ b/gilbert-test/Day03/vendingMachine.html
@@ -261,9 +261,9 @@
             });
         };
         var init = function(){
-            input();
-            addEvt();
-            returnMoney();
+            input();    // 투입 활성화
+            addEvt();   // 버튼 이벤트활성화
+            returnMoney();  //잔동반환 활성화
         };
 
         return init();
