--- a/claire-test/index.html
+++ b/claire-test/index.html
@@ -1,9 +1,30 @@
 <!DOCTYPE html>
 <html>
-	<body>
-		<h1>Hello</h1>
-		<button type="button" onclick='document.getElementById("demo").innerHTML = "Hello JavaScript!"'>Turn on</button>
-		
-		<button type="button" onclick='document.getElementById("demo").innerHTML = "Hello JavaScript!"'>Turn off</button>
-	</body>
+<head>
+<title>Title of the document</title>
+</head>
+
+<body>
+The content of the document......
+
+
+<div id="target"></div>
+
+<script>
+(funtion(){
+	var target = document.getElementById("target");
+	target.style.bacgroundColor = "red";
+
+	
+
+
+
+
+
+
+
+})();
+</script>
+</body>
+
 </html>
