--- a/gilbert-test/VendingMachine/newVending.html
+++ b/gilbert-test/VendingMachine/newVending.html
@@ -354,6 +354,7 @@
                 returnItem();
                 inputMoneyEvt();
                 returnMoneyEvt();
+            document.getElementById()
             };
             return {
                 init : init()
